--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -16,12 +16,12 @@
             = link_to title_for_model(Seminar, with_icon: true), admin_seminars_url, tabindex: -1
           /li class=('active' if controller_name == 'bookings')
             = link_to title_for_model(Booking, with_icon: true), bookings_url, tabindex: -1
-          - if policy(Page).index?
+          / - if policy(Page).index?
             li class=('active' if controller_name == 'pages')
               = link_to title_for_model(Page, with_icon: true), pages_url, tabindex: -1
           - if policy(Attendee).index?
             li class=('active' if controller_name == 'attendees')
-              = link_to title_for_model(Booking, with_icon: true), attendees_url, tabindex: -1
+              = link_to title_for_model(Booking, with_icon: true), admin_attendees_url, tabindex: -1
           - if policy(Invoice).index?
             li class=('active' if controller_name == 'invoices')
               = link_to title_for_model(Invoice, with_icon: true), invoices_url, tabindex: -1
