--- a/app/views/admin/attendees/_form.html.slim
+++ b/app/views/admin/attendees/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for(@attendee, defaults: { label: false }) do |f|
+= simple_form_for([:admin, @attendee], defaults: { label: false }) do |f|
 
   fieldset
     legend = Attendee.model_name.human
@@ -59,7 +59,7 @@
 
   .action-buttons
     .pull-right
-      => link_to t(:cancel), (session[:attendee_back_url] || [:admin, @seminar]), class: 'btn btn-default'
+      => link_to t(:cancel), (session[:attendee_back_url] || admin_seminar_url(@seminar)), class: 'btn btn-default'
       = f.submit t(:save), class: 'btn btn-primary'
 
   coffee:
