--- a/app/views/admin/bookings/_form.html.slim
+++ b/app/views/admin/bookings/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for(@booking, defaults: { label: false }) do |f|
+= simple_form_for([:admin, @booking], defaults: { label: false }) do |f|
   = f.input :seminar_id, as: :hidden
 
   fieldset
@@ -66,7 +66,7 @@
 
   .action-buttons
     .pull-right
-      => link_to t(:cancel), (session[:back_url] || [:admin, @seminar)], class: 'btn btn-default'
+      => link_to t(:cancel), (session[:back_url] || admin_seminar_url(@seminar)), class: 'btn btn-default'
       = f.submit t(:save), class: 'btn btn-primary'
 
 coffee:
