--- a/app/views/admin/bookings/index.html.slim
+++ b/app/views/admin/bookings/index.html.slim
@@ -19,9 +19,9 @@
     tbody
       - @bookings.each do | booking |
         - invoice = booking.invoice
-        tr data = {url: url_for(booking)} class=('warning' if booking.canceled?)
+        tr data = {url: admin_booking_url(booking)} class=('warning' if booking.canceled?)
           td = ldate booking.created_at, format: :short2
-          td = link_to booking.seminar.number, [:admin, booking.seminar]
+          td = link_to booking.seminar.number, admin_seminar_url(booking.seminar)
           td = booking.attendees.map(&:name).join('<br>').html_safe
           td = booking.contact_email
           td
