--- a/app/views/admin/search/index.html.slim
+++ b/app/views/admin/search/index.html.slim
@@ -13,6 +13,6 @@
         - results.each do |result|
           - if result.is_a? Attendee
             li.list-group-item class=('list-group-item-warning' if result.canceled?)
-              = link_to display_name_for(result), [:admin, result.booking.seminar]
+              = link_to display_name_for(result), admin_seminar_url(result.booking.seminar)
           - else
             li.list-group-item = link_to display_name_for(result), [:admin, result]
