Move locations to admin namespace

--- a/app/views/admin/seminars/show/_general.html.slim
+++ b/app/views/admin/seminars/show/_general.html.slim
@@ -41,7 +41,7 @@
 
     /= render 'admin/seminars/show/teachers'
     - location = @seminar.location
-    = link_to icon_for(location, text: location.name, size: 2), location if location
+    = link_to icon_for(location, text: location.name, size: 2), admin_location_url(location) if location
     p
       label Jahr
       =< @seminar.year
