--- a/app/views/admin/locations/index.html.slim
+++ b/app/views/admin/locations/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @locations
 .page-header
-  .buttons = new_link new_location_path
+  .buttons = new_link new_admin_location_path
   h2 = title_for @locations
 
 .table-responsive
@@ -12,7 +12,7 @@
         th = Location.human_attribute_name(:seminars)
     tbody
       - @locations.each do | location |
-        tr data = {url: url_for(location)}
+        tr data = {url: admin_location_url(location)}
           td = location.name
           td = location.address_city
           td = location.seminars.count
