--- a/app/views/admin/locations/show.html.slim
+++ b/app/views/admin/locations/show.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @location, :name
 .page-header
-  .buttons = delete_link @location
+  .buttons = delete_link @location, scope: :admin
   h2 = title_for @location
 
 = render 'form'
