--- a/app/views/admin/teachers/_form.html.slim
+++ b/app/views/admin/teachers/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for(@teacher) do |f|
+= simple_form_for([:admin, @teacher]) do |f|
   - if @teacher.errors.any?
     .alert.alert-danger.alert-dismissable
       button.close type="button" data-dismiss="alert"
