--- a/app/assets/stylesheets/bs_alert.sass
+++ b/app/assets/stylesheets/bs_alert.sass
@@ -1,4 +1,4 @@
-div.alert
-  position: absolute
-  right: 20px
-  width: 500px
+//div.alert
+//  position: absolute
+//  right: 20px
+//  width: 500px
