--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @categories
 .page-header
-  .buttons = new_link new_category_path
+  .buttons = new_link new_admin_category_path
   h2 = title_for @categories, count: current_catalog.categories.count
 
 /ul.list-group
