--- a/app/views/admin/seminars/show/_attendees.html.slim
+++ b/app/views/admin/seminars/show/_attendees.html.slim
@@ -16,7 +16,7 @@ h4
         td = ldate attendee.created_at, format: :short2
         td
           - if attendee.company
-            = link_to attendee.company.name, attendee.company
+            = link_to attendee.company.name, admin_company_url(attendee.company)
           - else
             = [booking.company_title, booking.invoice_title].select(&:present?).first
         /td
@@ -39,7 +39,7 @@ h4
           td = ldate attendee.created_at, format: :short2
           td
             - if attendee.company
-              = link_to attendee.company.name, attendee.company
+              = link_to attendee.company.name, admin_company_url(attendee.company)
             - else
               = [attendee.company_title, attendee.invoice_title].select(&:present?).first
           td = attendee.cancellation_reason
