--- a/app/views/admin/companies/index.html.slim
+++ b/app/views/admin/companies/index.html.slim
@@ -1,8 +1,8 @@
 - page_title_for @companies
 .page-header
   .buttons
-    => link_to fa_icon('table', text: 'Exportieren'), companies_url(format: :xlsx), class: 'btn btn-default'
-    = new_link new_company_path
+    => link_to fa_icon('table', text: 'Exportieren'), admin_companies_url(format: :xlsx), class: 'btn btn-default'
+    = new_link new_admin_company_path
   h2 = title_for @companies
 
 = paginate @companies
@@ -17,7 +17,7 @@
         th = Company.human_attribute_name(:email)
     tbody
       - @companies.each do | company |
-        tr data = {url: url_for(company)}
+        tr data = {url: admin_company_url(company)}
           td = lines_for [company.name, company.name2]
           td = lines_for [company.street, "#{company.zip} #{company.city}", company.city_part]
           td = lines_for [company.phone, company.mobile, company.fax]
