--- a/app/views/admin/catalogs/index.html.slim
+++ b/app/views/admin/catalogs/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @catalogs, :title
 .page-header
-  .buttons = new_link new_catalog_path
+  .buttons = new_link new_admin_catalog_path
   h2 = title_for @catalogs, :title
 
 .table-responsive
@@ -12,13 +12,13 @@
         th = Catalog.human_attribute_name(:year)
         th = Catalog.human_attribute_name(:seminars)
         th = Catalog.human_attribute_name(:categories)
-        th
+        / th
     tbody
       - @catalogs.each do |catalog|
-        tr data = {url: url_for(catalog)} class = (catalog.published ? 'success' : 'warning')
+        tr data = {url: admin_catalog_url(catalog)} class = (catalog.published ? 'success' : 'warning')
           td = current_catalog == catalog ? '✓' : '-'
           td = catalog.title
           td = catalog.year
           td = catalog.seminars.count
           td = catalog.categories.count
-          td = link_to fa_icon('table', text: 'Exportieren'), [catalog, format: :xlsx], class: 'btn btn-default btn-xs'
+          / td = link_to fa_icon('table', text: 'Exportieren'), [catalog, format: :xlsx], class: 'btn btn-default btn-xs'
