--- a/app/views/admin/feedbacks/new.html.slim
+++ b/app/views/admin/feedbacks/new.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for @feedback, remote: true do |f|
+= simple_form_for [:admin, @feedback], remote: true do |f|
   = f.input :path, as: :hidden
   = f.input :subject, label: false
   = f.input :message, as: :text, label: false, input_html: { rows: 10 }
