--- a/app/views/layouts/_feedback.html.slim
+++ b/app/views/layouts/_feedback.html.slim
@@ -1,4 +1,4 @@
-= link_to 'Feedback', new_feedback_url, class: 'feedback btn btn-info', remote: true
+= link_to 'Feedback', new_admin_feedback_url, class: 'feedback btn btn-info', remote: true
 
 #feedback-modal.modal.fade role="dialog" tabindex="-1"
   .modal-dialog role="document"
