--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for(@user) do |f|
+= simple_form_for([:admin, @user]) do |f|
   - if @user.errors.any?
     .alert.alert-danger.alert-dismissable
       button.close type="button" data-dismiss="alert"
