--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -45,7 +45,7 @@
             - if policy(User).index?
               li role="separator" class="divider"
               li class=('active' if controller_name == 'users')
-                = link_to title_for_model(User, with_icon: true), users_url, tabindex: -1
+                = link_to title_for_model(User, with_icon: true), admin_users_url, tabindex: -1
 
         ul.nav.navbar-nav.navbar-right
           = navbar_dropdown current_catalog.title do
