use separate layout for admin pages (part2)

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -16,12 +16,12 @@
  *= require select2-bootstrap
  *= require bootstrap-datepicker
  * require_tree .
- //*= require admin/1st_load_framework.css.sass
- //*= require admin/bs_alert.sass
- //*= require admin/overflow.sass
- //*= require admin/page-header.sass
- //*= require admin/popover.sass
- //*= require admin/table.sass
- //*= require admin/tabs.sass
+ *= require admin/1st_load_framework.css.sass
+ *= require admin/bs_alert.sass
+ *= require admin/overflow.sass
+ *= require admin/page-header.sass
+ *= require admin/popover.sass
+ *= require admin/table.sass
+ *= require admin/tabs.sass
  *= require_self
  */
